# matsuzawa-20260219

./: pyproject.toml
.github/workflows/: compile_latex.yml  run_experiment_validator.yml  run_main_experiment.yml  run_sanity_check.yml  run_visualization.yml
.research/: research_history.json
config/: config.yaml
config/run/: comparative-1-llama-3.1-8b-gsm8k.yaml  proposed-llama-3.1-8b-gsm8k.yaml
src/: evaluate.py  inference.py  main.py  model.py  preprocess.py  train.py
